# Synthesis-Zyfai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  agent.json  agent_log.json  foundry.toml  pyproject.toml  remappings.txt
agents/: __init__.py  config.py  errors.py  logging_utils.py  models.py  partner_artifacts.py  partners.py  runtime.py  zyfai_engine.py
docs/: architecture.mmd  audit.md  concepts.md  credentials.md  demo_video_script.md  live_readiness.md  security.md
script/: Deploy.s.sol
scripts/: plan_live_demo.py  render_submission.py  run_agent.py
src/: AutonomousActionCore.sol  AutonomousActionHub.sol  YieldMindController.sol
submissions/: synthesis.md
test/: YieldMindController.t.sol
tests/: test_project_context.py  test_runtime.py
